fixed issue where calendar was allowing horizontal scroll of child element

--- a/DatepickerSmall.css
+++ b/DatepickerSmall.css
@@ -267,7 +267,7 @@
         z-index: 9999;
         box-shadow: none;
         border-radius: 5px;
-        width: 360px;
+        width: 365px;
       }
       .DatepickerContainer .grid-container .day {
         margin: 1px !important;
